fixed white space in sitemap

--- a/CSS/sitemap.css
+++ b/CSS/sitemap.css
@@ -1,3 +1,6 @@
+body {
+	overflow: hidden;
+}
 h1 {
 	text-align:center;
 	padding:0.5em;
